@@ -1,5 +1,8 @@
 v4.2.9 (work in progress)
      * Add more dedicated unit tests for NCMATComposer.
+     * Add missing include in NCrystal/internal/utils/NCHists.hh.
+     * Expose internal Hist1D utility Python class in new (still internal)
+       _hist.py module, for potential usage in unit testing.
      * ...
 
 v4.2.8 2025-07-25
